Fixing workflow for happy scenario